# tari-geocache2

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.sqlx/: query-1ba270c96bd0223bc926e7667517f5621be14ada6999b38acdd3ecef3077b745.json  query-d39875d6e82f062a1f01c09b5c6196a79a93994ce340a6688f354afb1fe436fa.json
migrations/: 20250101000000_create_geocaches_table.sql  20250101000002_create_guestbook_table.sql  20250101000003_add_last_scanned_event.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  scanner.rs
static/: app.js  index.html  list.html  list.js
templates/: admin.html  print.html
