[package]
name = "tarigeocache"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "chrono",
] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.3"
tari_common_types = { git = "https://github.com/tari-project/tari.git" }
tari_utilities = "0.8.0"
tari_crypto = "0.22.1"
tari_common = { git = "https://github.com/tari-project/tari.git" }
